--- a/themes/clean-blog/_config.yml
+++ b/themes/clean-blog/_config.yml
@@ -28,7 +28,7 @@ comments:
     comment_colorscheme: light
 
 # Google Analytics Tracking ID
-google_analytics:
+google_analytics: UA-108382845-1
 
 # Addthis ID
 addthis:
