--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Odd Script
-subtitle: web, tech, code
+subtitle: writing (about) code
 description: An odd blog about web development, coding and other tech related stuff.
 author: Odd Script
 language: en
