--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://www.oddscript.com
+url: https://oddscript.com
 root: /
 permalink: :category/:title/
 permalink_defaults:
