--- a/themes/clean-blog/_config.yml
+++ b/themes/clean-blog/_config.yml
@@ -22,7 +22,7 @@ default_post_title: Untitled
 # Comments. Choose one by filling up the information
 comments:
   # Disqus comments
-  disqus_shortname:
+  disqus_shortname: odd-script
   # Facebook comments
   facebook:
     appid:
