--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "hexo": {
     "version": "3.3.9"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "dependencies": {
     "hexo": "^3.2.0",
     "hexo-browsersync": "^0.2.0",
@@ -14,6 +13,8 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.0",
+    "hexo-generator-robotstxt": "^0.2.0",
+    "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
