New article + design updates

--- a/themes/clean-blog/_config.yml
+++ b/themes/clean-blog/_config.yml
@@ -1,11 +1,11 @@
 # Header
 menu:
-  Home: /
-  Archives: /archives
-  About: "#"
+  #Home: /
+  #Archives: /archives
+  #About: "#"
   #Tags: /tags
-  #Categories: /categories
-  My books: "#"
+  Categories: "/#categories"
+  #My books: "#"
   #Github:
   #  url: https://github.com/oddscript
   #  icon: github
